# Python-Lessons

./: .gitignore  .pre-commit-config.yaml  LICENSE  QRCode.py  lesson_1.py  pyproject.toml
python_basics/: QRCode.py  ages_stats.py  bio.py  bio_input.py  bio_input_if.py  bug_reports.py  bugs_data_extraction.py  dictionaries.py  file_data_extraction.py  functions.py  lesson_1.py  loops_basics.py  panda_csv.py  test.py  user_data_extraction.py  users_dicts.py  week1.py
python_basics/data/: bugs.csv  users.csv
